--- a/joanna-sean/public/admin.html
+++ b/joanna-sean/public/admin.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="styles/modules.css">
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
   <!-- TODO: Setup a template for each row of the Author Stats section of this page: -->
+  <script id="author-template" type ="text/x-handlebars-template">
+    <li><strong>{{name}}</strong>:{{numWords}} words written</li></script>
 </head>
 
 <body>
